# virtioz-platform

./: .gitignore  LICENSE  README.md  base64.txt  package-lock.json  package.json  start.js  stop.js  test_llama.py  test_qwen.py  test_ui_cmd.js
core/: Cargo.toml
core/src/: agent.rs  router.rs  signaling.rs
core/test/: mock_server.py  send_task.py
shell/: .env.example  package-lock.json  package.json  webpack.config.js
shell/src/: App.js  index.html  main.js  styles.css
shell/src/components/: Login.js  SovereignDashboard.js  workspace.css
